--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,8 @@ html {
     scroll-behavior: smooth;
 }
 
+body {}
+
 @media (max-width: 550px) {
     #intro-images {
         display: none;
@@ -89,15 +91,15 @@ html {
 
 .categories-image_active {
     object-fit: cover;
-    width: 100%;
-    height: 250px;
+    width: 100% !important;
+    height: 200px;
 }
 
 @media (max-width: 768px) {
     .categories-image_active {
         object-fit: cover;
         width: 100%;
-        height: fit-content;
+        height: 100% !important;
     }
 }
 
@@ -119,14 +121,19 @@ html {
 }
 
 .custom-card {
-    border: 1px solid #DFDFDF;
     justify-content: space-between;
     min-height: 600px;
-    padding: 20px;
     border-radius: 10px;
-    /* box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; */
-    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 2px 2px 10px rgba(0,0,0,0.13); */
     /* box-shadow: 4px 4px 4px 6px rgba(0, 0, 0, 0.1); */
+}
+
+.job-card {
+    border: 1px solid #DFDFDF;
+    margin-bottom: 15px;
+    padding: 20px;
+    box-shadow: 8px 8px 8px rgb(0 0 0 / 25%);
+    min-height: 450px;
 }
 
 .skills-item {
@@ -143,7 +150,7 @@ html {
 
 @media (max-width: 768px) {
     .custom-card {
-        margin: 20px;
+        /* margin: 20px; */
     }
 
     .skills-item {
@@ -154,7 +161,7 @@ html {
 
 @media (min-width:768px) and (max-width: 1200px) {
     .custom-card {
-        margin: 20px;
+        margin: 10px;
     }
 
 }
@@ -163,8 +170,14 @@ html {
 
 @media (min-width: 1200px) {
     .custom-card {
-        margin:30px;
+        margin: 15px;
+        max-width: 450px;
     }
+
+    /* .owl-carousel-theme3 .owl-stage-outer .owl-item {
+        width: auto !important;
+    } */
+    
 
     /* .owl-carousel-theme2 .custom-card {
         margin-left: 150px !important;
@@ -173,7 +186,7 @@ html {
 
 .custom-card img {
     /* min-height: 150px; */
-    padding-bottom: 16px;
+    /* padding-bottom: 16px; */
 }
 
 
@@ -215,10 +228,11 @@ html {
     margin: 10px;
 }
 
+.owl-carousel .owl-item img {
+    width: auto !important;
+}
+
 @media (min-width:768px) {
-    .owl-carousel .custom-card {
-        width: 415px;
-    }
 
     .owl-prev {
         position: absolute;
@@ -328,7 +342,7 @@ html {
     border-radius: 10px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
     align-items: center;
-    min-height: 250px;
+    /* min-height: 250px; */
     margin: 10px 10px 40px 10px;
 }
 
@@ -347,7 +361,7 @@ html {
 
 .partner-content {
     border-left: 1px solid rgb(9 30 66 / 8%);
-    padding: 70px;
+    padding: 40px;
 }
 
 @media (max-width: 768px) {
@@ -363,14 +377,15 @@ html {
     background-color: #f9fafd;
     color: #333333;
     border: none;
-    padding-top: 21px;
-    padding-bottom: 21px;
+    /* padding-top: 21px;
+    padding-bottom: 21px; */
+    padding: 16px;
     width: 99%;
     border-radius: 10px;
 }
 
 .form-group {
-    margin-bottom: 21px;
+    margin-bottom: 15px;
 }
 
 @media (min-width: 768px) {
@@ -668,7 +683,8 @@ html {
 }
 
 .heading-text {
-    font-size: 1.6vw;
+    /* font-size: 1.6vw; */
+    font-size: 2.125rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -676,3 +692,28 @@ html {
         font-size: 2.0736rem;
     }
 }
+
+
+.button-filter-content {
+    display: none;
+}
+
+#btn-back-to-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #0030A1;
+    color: white;
+    cursor: pointer;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+  }
+
+  #btn-back-to-top:hover {
+   background-color: #0030a1c7;
+  }
