--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -141,11 +141,23 @@ body {}
 
 .custom-card {
     justify-content: space-between;
-    min-height: 600px;
     border-radius: 10px;
     /* box-shadow: 2px 2px 10px rgba(0,0,0,0.13); */
     /* box-shadow: 4px 4px 4px 6px rgba(0, 0, 0, 0.1); */
 }
+
+.card-size-large{
+    min-height: 710px;
+}
+
+.card-size-normal{
+    min-height: 585px;
+}
+
+.card-size-small{
+    min-height: 530px;
+}
+
 
 .job-card {
     border: 1px solid #DFDFDF;
@@ -162,7 +174,7 @@ body {}
 
 .background-skills-cover {
     position: absolute;
-    top: 1;
+    top: 1%;
     left: 0;
     right: 0;
 }
@@ -208,7 +220,9 @@ body {}
     /* padding-bottom: 16px; */
 }
 
-
+.custom-card h5 {
+    min-height: 46px ;
+}
 .custom-background-number {
     background-color: #F2F6FD;
     width: 70px;
