--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -515,6 +515,36 @@ html {
 }
 
 
+#toast-success {
+    position: fixed;
+    right: 1%;
+    top: 10%;
+    background-color: white;
+    width: 500px;
+    border-left: #b8debc 3px solid;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
+    animation: slideInLeft ease .3s, fadeOut linear 1s 3s forwards;
+}
+
+@keyframes slideInLeft {
+    from {
+        opacity: 0;
+        transform: translate(calc(100% + 32px));
+    }
+    to {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes fadeOut {
+    to {
+        opacity: 0;
+    }
+}
+
 /* style button */
 #btn-back-to-top {
     display: none;
